--- a/Lec02_Array_Class/Lec02_Array_Class.vcxproj
+++ b/Lec02_Array_Class/Lec02_Array_Class.vcxproj
@@ -127,6 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="car.cpp" />
+    <ClCompile Include="Complex.h" />
+    <ClCompile Include="car.h" />
     <ClCompile Include="Lec02_Array.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
