--- a/Lec02_Array_Class/Lec02_Array_Class.vcxproj.filters
+++ b/Lec02_Array_Class/Lec02_Array_Class.vcxproj.filters
@@ -15,8 +15,17 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Complex.h">
+      <Filter>헤더 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="car.h">
+      <Filter>헤더 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="car.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="Lec02_Array.cpp">
-      <Filter>리소스 파일</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
