MusicStreamingService 중간과정까지

--- a/Lec04_Array_Class/MusicStreaming/MusicStreaming/MusicStreaming.vcxproj
+++ b/Lec04_Array_Class/MusicStreaming/MusicStreaming/MusicStreaming.vcxproj
@@ -127,7 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="MusicStreamingService.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Music.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
