--- a/Lec04_Array_Class/MusicStreaming/MusicStreaming/MusicStreaming.vcxproj.filters
+++ b/Lec04_Array_Class/MusicStreaming/MusicStreaming/MusicStreaming.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MusicStreamingService.cpp">
+    <ClCompile Include="Music.h">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
