--- a/Homework/ThirdHomework/ThirdHomework.vcxproj
+++ b/Homework/ThirdHomework/ThirdHomework.vcxproj
@@ -127,10 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="sparsepoly.cpp" />
+    <ClCompile Include="Sparsepoly.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="sparsepoly.h" />
+    <ClInclude Include="Sparsepoly.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
