--- a/Homework/ThirdHomework/ThirdHomework.vcxproj.filters
+++ b/Homework/ThirdHomework/ThirdHomework.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="sparsepoly.cpp">
+    <ClCompile Include="Sparsepoly.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="sparsepoly.h">
+    <ClInclude Include="Sparsepoly.hpp">
       <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
